dot_config/waybar/style.css
@import "colors.css";

* {
  all: unset;
  font-family: "Inter", "JetBrainsMono Nerd Font Propo";
  font-size: 1em;
}

#workspaces,
#workspaces button,
#window,
#clock,
#tray,
#cpu,
#memory,
#audio,
#bluetooth,
#network,
#battery {
  background-color: @bg1;
  color: @fg1;
  border-radius: 10px;
  padding: 6px 12px;
  margin-left: 2px;
  margin-right: 2px;
}

#waybar > box {
  margin: 6px 4px;
  margin-bottom: 0;
}

#workspaces button {
  background-color: @bg2;
  padding: 0 18px;
  color: @fg2;
}

#workspaces button:hover {
  background-color: @yellow;
  color: @bg2;
}

#workspaces button.active {
  background-color: @green;
  color: @bg2;
}

#pulseaudio-slider {
  padding: 0;
  margin-left: 8px;
}
#pulseaudio-slider slider {
  min-height: 0px;
  min-width: 0px;
  opacity: 0;
  background-image: none;
  border: none;
  box-shadow: none;
}
#pulseaudio-slider trough {
  min-height: 8px;
  min-width: 80px;
  border-radius: 5px;
  background-color: @bg0;
}
#pulseaudio-slider highlight {
  min-width: 8px;
  border-radius: 5px;
  background-color: @green;
}

#battery.warning {
  color: @yellow;
}
#battery.critical {
  color: @red;
}

tooltip > box,
menu {
  padding: 6px 8px;
  border: 2px solid @fg1;
  border-radius: 10px;
  background-color: @bg1;
}

tooltip label {
  color: @fg1;
}

menuitem {
  padding: 6px 8px;
  border-radius: 10px;
  color: @fg1;
}

menuitem:hover {
  background-color: @bg3;
}

